<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="22dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/edit_your_profile"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Username"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/email"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/primary_text_light" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/person_24px"
            android:visibility="gone"
            app:shapeAppearance="@style/ShapeAppearance.Material3.MediumComponent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadImageButton"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:enabled="false"
            android:text="@string/upload_image"
            android:textColor="@android:color/primary_text_light"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveProfileButton"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textColor="@android:color/primary_text_light" />
    </LinearLayout>
</ScrollView>
