<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="22dp"
    android:paddingTop="16dp"
    android:paddingEnd="20dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:id="@+id/amountInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoriesMenu"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:hint="@string/select_category"
                android:visibility="gone"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="dropdown_menu">

                <AutoCompleteTextView
                    android:id="@+id/categoriesDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    app:simpleItems="@array/categories_array"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dynamicInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:id="@+id/notesInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/makeBabyActivityButton"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_baby_activity"
            android:textColor="@color/md_theme_primary_highContrast"
            app:iconPadding="10dp" />

        <TextView
            android:id="@+id/babyActivitiesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/baby_activities_last"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/makeBabyActivityButton" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/babyActivitiesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="false"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountInputLayout"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
